[gd_scene load_steps=3 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://godot.png" type="Texture" id=2]

[node name="main" type="Control"]

margin_right = 800.0
margin_bottom = 600.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )

[node name="trans" type="VBoxContainer" parent="."]

editor/display_folded = true
margin_left = 56.0
margin_top = 256.0
margin_right = 129.0
margin_bottom = 582.0
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0

[node name="linear" type="Button" parent="trans"]

margin_left = 12.0
margin_top = 3.0
margin_right = 60.0
margin_bottom = 23.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "linear"
flat = false

[node name="sine" type="Button" parent="trans"]

margin_left = 17.0
margin_top = 33.0
margin_right = 56.0
margin_bottom = 53.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "sine"
flat = false

[node name="quint" type="Button" parent="trans"]

margin_left = 14.0
margin_top = 63.0
margin_right = 59.0
margin_bottom = 83.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "quint"
flat = false

[node name="quart" type="Button" parent="trans"]

margin_left = 14.0
margin_top = 93.0
margin_right = 59.0
margin_bottom = 113.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "quart"
flat = false

[node name="quad" type="Button" parent="trans"]

margin_left = 15.0
margin_top = 123.0
margin_right = 58.0
margin_bottom = 143.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "quad"
flat = false

[node name="expo" type="Button" parent="trans"]

margin_left = 15.0
margin_top = 153.0
margin_right = 58.0
margin_bottom = 173.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "expo"
flat = false

[node name="elastic" type="Button" parent="trans"]

margin_left = 9.0
margin_top = 183.0
margin_right = 63.0
margin_bottom = 203.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "elastic"
flat = false

[node name="cubic" type="Button" parent="trans"]

margin_left = 13.0
margin_top = 213.0
margin_right = 59.0
margin_bottom = 233.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "cubic"
flat = false

[node name="circ" type="Button" parent="trans"]

margin_left = 19.0
margin_top = 243.0
margin_right = 54.0
margin_bottom = 263.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "circ"
flat = false

[node name="bounce" type="Button" parent="trans"]

margin_left = 7.0
margin_top = 273.0
margin_right = 66.0
margin_bottom = 293.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "bounce"
flat = false

[node name="back" type="Button" parent="trans"]

margin_left = 16.0
margin_top = 303.0
margin_right = 57.0
margin_bottom = 323.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "back"
flat = false

[node name="eases" type="VBoxContainer" parent="."]

editor/display_folded = true
margin_left = 152.0
margin_top = 256.0
margin_right = 215.0
margin_bottom = 372.0
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0

[node name="in" type="Button" parent="eases"]

margin_left = 19.0
margin_top = 3.0
margin_right = 43.0
margin_bottom = 23.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "in"
flat = false

[node name="out" type="Button" parent="eases"]

margin_left = 15.0
margin_top = 33.0
margin_right = 48.0
margin_bottom = 53.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "out"
flat = false

[node name="in_out" type="Button" parent="eases"]

margin_left = 6.0
margin_top = 63.0
margin_right = 57.0
margin_bottom = 83.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "in_out"
flat = false

[node name="out_in" type="Button" parent="eases"]

margin_left = 6.0
margin_top = 93.0
margin_right = 57.0
margin_bottom = 113.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "out_in"
flat = false

[node name="modes" type="VBoxContainer" parent="."]

editor/display_folded = true
margin_left = 240.0
margin_top = 256.0
margin_right = 317.0
margin_bottom = 492.0
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0

[node name="move" type="Button" parent="modes"]

margin_left = 14.0
margin_top = 3.0
margin_right = 62.0
margin_bottom = 23.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "move"
flat = false

[node name="color" type="Button" parent="modes"]

margin_left = 16.0
margin_top = 33.0
margin_right = 60.0
margin_bottom = 53.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "color"
flat = false

[node name="scale" type="Button" parent="modes"]

margin_left = 16.0
margin_top = 63.0
margin_right = 61.0
margin_bottom = 83.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "scale"
flat = false

[node name="rotate" type="Button" parent="modes"]

margin_left = 13.0
margin_top = 93.0
margin_right = 63.0
margin_bottom = 113.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "rotate"
flat = false

[node name="callback" type="Button" parent="modes"]

margin_left = 7.0
margin_top = 123.0
margin_right = 70.0
margin_bottom = 143.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "callback"
flat = false

[node name="follow" type="Button" parent="modes"]

margin_left = 13.0
margin_top = 153.0
margin_right = 63.0
margin_bottom = 173.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "follow"
flat = false

[node name="repeat" type="Button" parent="modes"]

margin_left = 12.0
margin_top = 183.0
margin_right = 65.0
margin_bottom = 203.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "repeat"
flat = false

[node name="pause" type="Button" parent="modes"]

margin_left = 13.0
margin_top = 213.0
margin_right = 63.0
margin_bottom = 233.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "pause"
flat = false

[node name="color" type="VBoxContainer" parent="."]

editor/display_folded = true
margin_left = 384.0
margin_top = 240.0
margin_right = 760.0
margin_bottom = 592.0
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0

[node name="label_1" type="Label" parent="color"]

margin_left = 151.0
margin_right = 225.0
margin_bottom = 14.0
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Color From:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="color_from" type="ColorPicker" parent="color"]

margin_left = 71.0
margin_top = 18.0
margin_right = 304.0
margin_bottom = 207.0
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0

[node name="label_2" type="Label" parent="color"]

margin_left = 160.0
margin_top = 211.0
margin_right = 216.0
margin_bottom = 225.0
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Color To:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="color_to" type="ColorPicker" parent="color"]

margin_left = 71.0
margin_top = 229.0
margin_right = 304.0
margin_bottom = 418.0
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 0

[node name="tween" type="Tween" parent="."]

playback_process_mode = 1
playback/active = true
playback/repeat = true
playback/speed = 1.0

[node name="area" type="Panel" parent="tween"]

margin_left = 32.0
margin_top = 32.0
margin_right = 768.0
margin_bottom = 216.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="label" type="RichTextLabel" parent="tween/area"]

margin_left = 176.0
margin_top = 24.0
margin_right = 552.0
margin_bottom = 160.0
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1

[node name="sprite" type="Sprite" parent="tween/area"]

texture = ExtResource( 2 )

[node name="follow" type="Sprite" parent="tween/area"]

position = Vector2( 0, 185 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Animation", "Offset", "Region" ]

[node name="follow_2" type="Sprite" parent="tween/area"]

position = Vector2( 736, 0 )
texture = ExtResource( 2 )

[node name="timeline" type="HSlider" parent="."]

margin_left = 40.0
margin_top = 224.0
margin_right = 760.0
margin_bottom = 240.0
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 0
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 1.0
exp_edit = false
rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[connection signal="tween_step" from="tween" to="." method="_on_tween_step"]

[connection signal="value_changed" from="timeline" to="." method="_on_timeline_value_changed"]


